fixed alignment

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -15,9 +15,13 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+.gallery {
+  margin-left: 30px;
+  margin-right: 30px;
+}
 .flexbox {
   display: grid;
-  padding: 2em;
   grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
   grid-template-rows: masonry;
   gap: 30px;
